# Orderly

./: Cargo.toml  README.md
.github/workflows/: cd.yml  ci.yml
src/: main.rs
src/core/: boundary.rs  executor.rs  mod.rs  models.rs  planner.rs  rule_engine.rs  scanner.rs  semantic.rs  sim_integration_tests.rs
src/storage/: config.rs  database.rs  mod.rs
src/ui/: app.rs  dialogs.rs  mod.rs  preview_table.rs  rule_panel.rs  styles.rs
