[package]
name = "orderly"
version = "0.1.0"
edition = "2021"
description = "AI-enhanced local file organizer"
authors = ["ModerRAS"]
license = "MIT"

[dependencies]
# GUI框架
eframe = "0.29"
egui = "0.29"
egui_extras = { version = "0.29", features = ["all_loaders"] }

# 异步运行时
tokio = { version = "1", features = ["full"] }

# 序列化
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# HTTP客户端（用于AI API调用）
reqwest = { version = "0.12", features = ["json"] }

# 文件系统操作
walkdir = "2"
filetime = "0.2"

# 文件类型检测
infer = "0.16"

# 文件元数据读取
file-format = "0.26"

# 哈希计算
sha2 = "0.10"
hex = "0.4"

# 日期时间
chrono = { version = "0.4", features = ["serde"] }

# 唯一ID生成
uuid = { version = "1", features = ["v4", "serde"] }

# 日志
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# 错误处理
anyhow = "1"
thiserror = "1"

# 数据库（用于规则和历史存储）
rusqlite = { version = "0.32", features = ["bundled"] }

# 文件对话框
rfd = "0.15"

# 配置文件
directories = "5"

[dev-dependencies]
tempfile = "3"

[profile.release]
opt-level = 3
lto = true
